--- a/_rmd/2017-08-22-Regression-trees-for-forecasting-time-series-in-R.Rmd
+++ b/_rmd/2017-08-22-Regression-trees-for-forecasting-time-series-in-R.Rmd
@@ -4,7 +4,7 @@ title: Using regression trees for forecasting double-seasonal time series with t
 author: Peter Laurinec
 published: false
 status: process
-tags: tree forecast
+tags: R tree forecast
 draft: false
 ---
 
@@ -253,7 +253,7 @@ paste("Number of splits: ", tree_1$cptable[dim(tree_1$cptable)[1], "nsplit"])
 We can see that most important variables are Lag and cosine forms of the daily and weekly season. The number of splits is 10, ehm, is it enough for time series of length 1008 values?
 
 Let's plot created rules with fancy `rpart.plot` function from the same named package:
-```{r, fig.width = 7.5, fig.height = 5.5}
+```{r, fig.width = 8.5, fig.height = 6.5}
 rpart.plot(tree_1, digits = 2, 
            box.palette = viridis::viridis(10, option = "D", begin = 0.85, end = 0), 
            shadow.col = "grey65", col = "grey99")
