--- a/_rmd/2017-08-22-Regression-trees-for-forecasting-time-series-in-R.Rmd
+++ b/_rmd/2017-08-22-Regression-trees-for-forecasting-time-series-in-R.Rmd
@@ -51,7 +51,7 @@ library(knitr)
 opts_knit$set(root.dir = "C:\\Users\\Peter\\Downloads\\ProjektBD\\enernoc\\")
 ```
 
-Now read the mentioned time series data by `read_feather` to one `data.table`.
+Now read the mentioned time series data by `read_feather` to one `data.table`. The dataset can be found on [my github repo](https://github.com/PetoLau/petolau.github.io/tree/master/_rmd), the name of the file is *DT_load_17weeks*.
 ```{r}
 DT <- as.data.table(read_feather("DT_load_17weeks"))
 ```
