--- a/package.Rmd
+++ b/package.Rmd
@@ -4,7 +4,7 @@ permalink: /package/
 layout: page
 output:
   md_document:
-    variant: markdown
+    variant: markdown_github
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -13,11 +13,9 @@ output:
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "images\\package-"
+  fig.path = "\\images\\package-"
 )
 ```
-
-# TSrepr
 
 TSrepr is R package for fast time series representations and dimensionality reduction computations. Z-score normalisation, min-max normalisation, forecasting accuracy measures and other useful functions implemented in C++ (Rcpp) and R.
 
