--- a/package.Rmd
+++ b/package.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "TSrepr - R package for time series representations"
 permalink: /package/
-layout: page
+layout: post
 output:
   md_document:
     variant: markdown
