--- a/package.Rmd
+++ b/package.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "TSrepr - R package for time series representations"
 permalink: /package/
-layout: post
+layout: page
 output:
   md_document:
     variant: markdown
@@ -85,3 +85,5 @@ ggplot(data_plot, aes(time, value, color = type, size = type)) +
 ## Contact
 
 For any suggestions and comments write me an email at: [tsreprpackage@gmail.com](mailto:tsreprpackage@gmail.com)
+
+{% include share-page.html share-page_identifier=page.share-page_identifier %}
