Update: package CRAN

--- a/package.Rmd
+++ b/package.Rmd
@@ -17,12 +17,16 @@ knitr::opts_chunk$set(
 )
 ```
 
-[**TSrepr**](https://github.com/PetoLau/TSrepr) is **R** package for fast time series representations and dimensionality reduction computations. Z-score normalisation, min-max normalisation, forecasting accuracy measures and other useful functions implemented in C++ (Rcpp) and R.
+[**TSrepr**](https://github.com/PetoLau/TSrepr) is **R** package for fast time series representations and dimensionality reduction computations. Z-score normalisation, min-max normalisation, forecasting accuracy measures and other useful functions implemented in C++ (Rcpp) and R. **TSrepr** package is available on [CRAN](https://CRAN.R-project.org/package=TSrepr).
 
 ## Installation
 
-You can install **TSrepr** from github with:
+You can install **TSrepr** directly from [CRAN](https://CRAN.R-project.org/package=TSrepr):
+```{r cran-installation, eval = FALSE}
+install.packages("TSrepr")
+```
 
+Or development version from [GitHub](https://github.com/PetoLau/TSrepr) with:
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("PetoLau/TSrepr")
