Update: TSrepr post

--- a/_rmd/2018-01-26-TSrepr-time-series-representations.Rmd
+++ b/_rmd/2018-01-26-TSrepr-time-series-representations.Rmd
@@ -3,8 +3,9 @@ layout: post
 title: TSrepr - Time Series Representations in R
 author: Peter Laurinec
 bibliography: papers.bib
+csl: ieee.csl
 published: false
-status: processed
+status: process
 tags: test
 draft: false
 ---
@@ -269,4 +270,4 @@ So, the maximal run length of ones is 15 and maximal run length of zeros is 30, 
 
 And we have described and used every time series representation method implemented in the **TSrepr** package. In the next post (tutorial), I will show you one typical use case for using time series representation – clustering of time series.
 
-## Bibliography
+## References
