--- a/_rmd/2018-01-26-TSrepr-time-series-representations.Rmd
+++ b/_rmd/2018-01-26-TSrepr-time-series-representations.Rmd
@@ -3,7 +3,7 @@ layout: post
 title: TSrepr - Time Series Representations in R
 author: Peter Laurinec
 published: false
-status: process
+status: processed
 tags: R TSrepr
 draft: false
 ---
