--- a/package.Rmd
+++ b/package.Rmd
@@ -10,6 +10,8 @@ output:
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ```{r, echo = FALSE}
+knitr::render_jekyll(highlight = "pygments")
+
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
@@ -86,6 +88,17 @@ ggplot(data_plot, aes(time, value, color = type, size = type)) +
   theme_bw()
 ```
 
+## For more information
+
+ - Check my blog post at [petolau.github.io/TSrepr-time-series-representations](https://petolau.github.io/TSrepr-time-series-representations/),
+ - Check my blog post about clustering time series representations at [petolau.github.io/TSrepr-clustering-time-series-representations](https://petolau.github.io/TSrepr-clustering-time-series-representations/).
+
 ## Contact
 
 For any suggestions and comments write me an email at: [tsreprpackage@gmail.com](mailto:tsreprpackage@gmail.com)
+
+## Citation
+
+Cite the package as:
+
+ - Laurinec, (2018). TSrepr R package: Time Series Representations. Journal of Open Source Software, 3(23), 577, https://doi.org/10.21105/joss.00577
