--- a/package.Rmd
+++ b/package.Rmd
@@ -2,9 +2,8 @@
 title: "TSrepr - R package for time series representations"
 permalink: /package/
 layout: package
-output:
-  md_document:
-    variant: markdown
+status: process
+published: false
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
