--- a/package.Rmd
+++ b/package.Rmd
@@ -100,4 +100,4 @@ For any suggestions and comments write me an email at: [tsreprpackage@gmail.com]
 
 Cite the package as:
 
- - Laurinec, (2018). TSrepr R package: Time Series Representations. Journal of Open Source Software, 3(23), 577, https://doi.org/10.21105/joss.00577
+ - Laurinec, (2018). TSrepr R package: Time Series Representations. Journal of Open Source Software, 3(23), 577, [https://doi.org/10.21105/joss.00577](https://doi.org/10.21105/joss.00577)
